<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/bg_order"
    android:paddingBottom="@dimen/_15sdp"
    tools:context=".Activities.Order_Activity">

    <ImageView
        android:id="@+id/iv_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_26sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_alarm_icon"
        app:srcCompat="@drawable/circle_red" />

    <TextView
        android:id="@+id/tv_notAccepting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_42sdp"
        android:text="@string/str_no_order"
        android:textColor="@color/color_txt_gray"
        android:textSize="@dimen/_7sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_inactive" />

    <TextView
        android:id="@+id/tv_inactive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/str_inactive"
        app:layout_constraintStart_toEndOf="@+id/iv_red"
        app:layout_constraintTop_toBottomOf="@+id/tv_15Min" />

    <ImageView
        android:id="@+id/iv_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_26sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_green"
        app:srcCompat="@drawable/circle_yellow" />

    <TextView
        android:id="@+id/tv_pauseOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_42sdp"
        android:text="@string/str_pause_orders"
        android:textColor="@color/color_txt_gray"
        android:textSize="@dimen/_7sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pause" />

    <TextView
        android:id="@+id/tv_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/str_pause"
        app:layout_constraintStart_toEndOf="@+id/iv_yellow"
        app:layout_constraintTop_toBottomOf="@+id/tv_acceptOrder" />

    <ImageView
        android:id="@+id/iv_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_26sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/tv_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/str_active"
        app:layout_constraintStart_toEndOf="@+id/iv_green"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_acceptOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_42sdp"
        android:text="@string/str_acceptorder"
        android:textColor="@color/color_txt_gray"
        android:textSize="@dimen/_7sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_active" />

    <ImageView
        android:id="@+id/iv_alarm_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@drawable/ic_alarms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_yellow" />

    <TextView
        android:id="@+id/tv_15Min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="@drawable/txt_gray_circle"
        android:gravity="center"
        android:text="@string/min15"
        android:textColor="@color/white"
        android:textSize="@dimen/_6sdp"
        app:layout_constraintStart_toEndOf="@+id/iv_alarm_icon"
        app:layout_constraintTop_toBottomOf="@+id/tv_pauseOrders" />

    <TextView
        android:id="@+id/tv_1Hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="@drawable/txt_gray_circle"
        android:gravity="center"
        android:text="@string/hour"
        android:textColor="@color/white"
        android:textSize="@dimen/_6sdp"
        app:layout_constraintStart_toEndOf="@+id/tv_30Min"
        app:layout_constraintTop_toBottomOf="@+id/tv_pauseOrders" />

    <TextView
        android:id="@+id/tv_30Min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="@drawable/txt_black_circle"
        android:gravity="center"
        android:text="@string/min30"
        android:textColor="@color/white"
        android:textSize="@dimen/_6sdp"
        app:layout_constraintStart_toEndOf="@+id/tv_15Min"
        app:layout_constraintTop_toBottomOf="@+id/tv_pauseOrders" />

    <ImageView
        android:id="@+id/iv_check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_pauseOrders"
        app:layout_constraintTop_toBottomOf="@+id/iv_check1" />

    <ImageView
        android:id="@+id/iv_check3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_34sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:src="@drawable/ic_check"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_notAccepting"
        app:layout_constraintTop_toBottomOf="@+id/tv_1Hour" />

    <ImageView
        android:id="@+id/iv_check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_44sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:scaleType="centerInside"
        android:visibility="invisible"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_acceptOrder"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>