<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:scaleType="center"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/driverToolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userToolbar"
        android:layout_alignParentStart="true"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_enterEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/bg_txtgray"
            android:drawableStart="@drawable/ic_driver_name"
            android:drawablePadding="@dimen/dim_10sdp"
            android:drawableTint="@color/textColor"
            android:hint="@string/str_driver_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dim_10sdp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor" />

        <EditText
            android:id="@+id/tv_enterPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/bg_txtgray"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/dim_10sdp"
            android:drawableTint="@color/textColor"
            android:hint="@string/str_driver_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="@dimen/dim_10sdp"
            android:textColor="#616161"
            android:textColorHint="#616161" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_register"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="Welcome!"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="204dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:text="@string/enter_name_pass"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>