<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white"
    android:paddingBottom="22dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/tv_arrivalInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/car_information"
        android:textAlignment="center"
        android:textColor="#3B505E"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_downArrow"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toEndOf="@+id/tv_arrivalInformation"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/downward_arrow" />

    <ImageView
        android:id="@+id/tv_arrival"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_bus_front"
        android:text="Driver name"
        android:textColor="@color/txt_gray"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_arrivalInformation" />

    <TextView
        android:id="@+id/tv_latLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="Latitude: "
        android:textColor="@color/time_green"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/tv_latLong2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="12dp"
        android:text="Longitude: "
        android:textColor="@color/time_green"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toEndOf="@+id/tv_latLong"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="27dp"
        android:text="@string/driver_name"
        android:textColor="@color/txt_gray"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_arrival"
        app:layout_constraintTop_toBottomOf="@+id/tv_arrivalInformation" />

    <TextView
        android:id="@+id/tv_driverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/driver"
        android:textColor="@color/light_pink"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@+id/iv_downArrow" />

    <TextView
        android:id="@+id/tv_truck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/van_number"
        android:textColor="@color/txt_gray"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_arrival"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_busNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="ABC-123"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@+id/tv_truck"
        app:layout_constraintTop_toBottomOf="@+id/tv_driverName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="115dp"
        android:background="@drawable/txt_line"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_truck" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>